--- a/Gardenguru/style.css
+++ b/Gardenguru/style.css
@@ -3,9 +3,108 @@
   src:url('Fonts(potentially)/swansea-font') format('truetype');
 }
 
+*, *::before, *::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
+
+
+
+
+.nav {
+  position: fixed;
+  width: 100vw;
+  background-color: white;
+  @font-family: Sora;
+}
+.nav__list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1px;
+  margin: 0 1rem;
+}
+.nav__listlogo {
+  list-style: none;
+  margin-left: 0.8rem;
+  margin-right: auto;
+  cursor: pointer;
+}
+.nav__listlogo svg {
+  width: 2.5rem;
+  transition: fill 250ms ease-in;
+}
+.nav__listlogo svg:hover, .nav__listlogo svg:focus {
+  fill: #f06292;
+}
+.nav__listitem {
+  list-style: none;
+  font-weight: bold;
+  position: relative;
+  padding: 1.5rem 1rem;
+  cursor: pointer;
+}
+.nav__listitem::after {
+  content: "";
+  width: 0;
+  height: 0.3rem;
+
+  position: absolute;
+  left: 1rem;
+  bottom: 0.8rem;
+  background-color: #f06292;
+  transition: width 200ms ease-in;
+}
+.nav__listitem:hover::after, .nav__listitem:focus::after {
+  width: 80%;
+}
+.nav__listitem:hover ul, .nav__listitem:focus ul {
+  opacity: 1;
+  visibility: visible;
+}
+.nav__listitemdrop {
+  position: absolute;
+  top: 4rem;
+  left: -1rem;
+  background-color: white;
+  width: 12rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 200ms ease-in-out;
+}
+.nav__listitemdrop li {
+  list-style: none;
+  padding: 0.5rem 1rem;
+  transition: background-color 200ms ease-in-out;
+}
+.nav__listitemdrop li:hover, .nav__listitemdrop li:focus {
+  background-color: #fce4ec;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 body{
   position: relative;
   min-height: 100vh; /*ne ajuta sa tinem footer-ul la sfarsitul paginii, indiferent ca avem destul continut cat sa ocupam pagina sau nu*/
+  padding-bottom: 60px;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -18,63 +117,23 @@ body::after {
   height: 50px; /* Set same as footer's height */
 }
 
-/* Style the header with a grey background and some padding */
-.header {
-  position: sticky;
-  top: 0;
-  overflow: hidden;
-  padding: 20px 10px;
-  background-color: grey;
-  /* scrollbar-gutter: stable; */ /* o metoda foarte buna pentru a portiona continutul site-ului adaugand un spatiu in dreapta paginii simuland un scrollbar; cand mergem de pe o coloana pe alta, se cam muta categoriile intre ele; s-ar putea sa gasim solutia in javascript/php, dar direct din css nu */
+
+
+
+
+
+.lorem{
+  padding: 30px;
+  padding-top: 5rem;
+  font-size: 12px;
 }
 
-/* Style the header links */
-.header a {
-  float: left;
-  color: black;
-  text-align: right;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 20px;
-  line-height: 10px;
-  border-radius: 4px;
-}
 
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-}
 
-/* Change the background color on mouse-over */
-.header-pages a:hover {
-  background-color: #ddd;
-  color: black;
-}
 
-/* Style the active/current link*/
-.header-pages a.active {
-  background-color: dodgerblue;
-  color: white;
-}
 
-/* Float the link section to the right */
-.header-pages {
-  float: right;
-  overflow: hidden;
-}
 
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .header-pages {
-    float: right;
-  }
-}
+
 
 .collapsible {
   background-color: #777;
@@ -101,8 +160,18 @@ body::after {
 
 .footer {
   position:absolute;
+  display: flex;
+  justify-content: center;
+  font-family: sans-serif;
   bottom:0;
   width:100%;
   height:50px;   /* Height of the footer */
+  padding: 1rem 0.5rem;
   background:grey;
+}
+
+@media only screen and (max-width: 600px) {
+  .footer {
+    padding: 5px 5px;
+  }
 }
