--- a/Gardenguru/style.css
+++ b/Gardenguru/style.css
@@ -29,16 +29,10 @@
 }
 .nav__listlogo {
   list-style: none;
+  font-weight: bold;
   margin-left: 0.8rem;
   margin-right: auto;
   cursor: pointer;
-}
-.nav__listlogo svg {
-  width: 2.5rem;
-  transition: fill 250ms ease-in;
-}
-.nav__listlogo svg:hover, .nav__listlogo svg:focus {
-  fill: #f06292;
 }
 .nav__listitem {
   list-style: none;
@@ -56,7 +50,6 @@
   left: 1rem;
   bottom: 0.8rem;
   background-color: #f06292;
-  transition: width 200ms ease-in;
 }
 .nav__listitem:hover::after, .nav__listitem:focus::after {
   width: 80%;
@@ -77,12 +70,10 @@
   gap: 0.5rem;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 200ms ease-in-out;
 }
 .nav__listitemdrop li {
   list-style: none;
   padding: 0.5rem 1rem;
-  transition: background-color 200ms ease-in-out;
 }
 .nav__listitemdrop li:hover, .nav__listitemdrop li:focus {
   background-color: #fce4ec;
@@ -114,7 +105,7 @@ body{
 body::after {
   content: '';
   display: block;
-  height: 50px; /* Set same as footer's height */
+  height: 125px; /* Set same as footer's height */
 }
 
 
@@ -122,11 +113,161 @@ body::after {
 
 
 
-.lorem{
+.intro{
+ /* top: 0;
+ right: 0;
+ bottom: 0;
+ left: 0; */
+ display: flex;
+ flex-direction: column;
+ min-height: 100vh;
+ align-items: center;
+ align-content: center;
+}
+
+.intro>.text{
   padding: 30px;
-  padding-top: 5rem;
+  padding-top: 45vh;
   font-size: 12px;
 }
+
+
+
+
+
+
+
+
+
+
+
+.container1{
+  background-color: red;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container1>.image{
+  flex: 0 0 auto;
+}
+
+.container1>.image>img{
+  display: block;
+  max-width: 100%;
+  max-height: 30rem;
+}
+
+.container1>.text{
+  flex: 0 0 auto;
+  padding-right: 10vw;
+}
+
+
+
+.container2{
+  background-color: red;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container2>.text{
+  flex: 0 0 auto;
+  padding: 10vw;
+}
+
+.container2>.image{
+  flex: 0 0 auto;
+}
+
+.container2>.image>img{
+  display: block;
+  max-width: 100%;
+  max-height: 30rem;
+}
+
+
+
+
+.aboutcontainer {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  height: 80vh;
+}
+
+.aboutcontainer>.image {
+  grid-area: 2 / 3 / 6 / 7;
+  /* max-width: 100%; */
+  /* object-fit: cover;
+  width: 100%;
+  height: 100%; */
+  background-color: blue;
+}
+
+.aboutcontainer>.image>img {
+  /* max-width: 100%; */
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  /* background-color: blue; */
+}
+
+.aboutcontainer>.name {
+  grid-area: 2 / 7 / 3 / 11;
+  background-color: red;
+}
+
+.aboutcontainer>.text {
+  grid-area: 3 / 7 / 5 / 11;
+  background-color: orange;
+}
+
+.aboutcontainer>.buttons {
+  grid-area: 5 / 7 / 6 / 11;
+  background-color: green;
+}
+
+
+
+
+
+/*
+.aboutcontainer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+  padding-bottom: 5rem;
+}
+
+.aboutcontainer>.image{
+  flex: 0 0 auto;
+}
+
+.aboutcontainer>.image>img{
+  display: block;
+  max-width: 100%;
+  max-height: 25rem;
+}
+
+.aboutcontainer>.text{
+  flex: 0 0 auto;
+  padding-right: 10vw;
+} */
+
+
+
+
 
 
 
@@ -165,13 +306,86 @@ body::after {
   font-family: sans-serif;
   bottom:0;
   width:100%;
-  height:50px;   /* Height of the footer */
+  height:100px;   /* Height of the footer */
   padding: 1rem 0.5rem;
   background:grey;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) { /* poate fi si 800px pt landscape in telefoane */
+
+  .container1{
+    background-color: red;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /* align-items: center; */
+    min-height: 87.5vh;
+    /* align-content: center; */
+  }
+
+  .container1>.image{
+    flex: 0 0 75%;
+  }
+
+  .container1>.image>img{
+    display: block;
+    height: 45vh;
+    object-fit: cover;
+  }
+
+  .container1>.text{
+    flex: 0 0 20%;
+    padding: 20px;
+    padding-bottom: 20vh;
+  }
+
+  .container2{
+    background-color: red;
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /* align-items: center; */
+  }
+
+  .container2>.image{
+    flex: 0 0 60%;
+  }
+
+  .container2>.image>img{
+    display: block;
+    height: 45vh;
+    object-fit: cover;
+  }
+
+  .container2>.text{
+    flex: 0 0 35%;
+    padding: 20px;
+    padding-top: 20vh;
+    padding-bottom: 20vh;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   .footer {
     padding: 5px 5px;
+    height:50px;
   }
 }
