--- a/Gardenguru/style.css
+++ b/Gardenguru/style.css
@@ -196,7 +196,7 @@ body::after {
 
 .aboutcontainer {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(6, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
@@ -204,39 +204,123 @@ body::after {
 }
 
 .aboutcontainer>.image {
-  grid-area: 2 / 3 / 6 / 7;
+  grid-area: 2 / 2 / 6 / 6;
   /* max-width: 100%; */
   /* object-fit: cover;
   width: 100%;
   height: 100%; */
+  /* place-self: center; */
+  /* align-self: center;
+  justify-self: start; */
+  /* justify-self: end; */
+  /* padding-right */
+  /* margin-left: auto; */
   background-color: blue;
 }
 
 .aboutcontainer>.image>img {
   /* max-width: 100%; */
-  object-fit: cover;
+  /* place-self: center; */
+  /* object-position: center; */
+  /* object-fit: contain; */
+  /* padding-left: 5rem; */
+  /* height: 40vh;
+  width: 40vw */
+  /* height: 80%; */
+  object-fit: contain;
+  /* justify-content: flex-end; */
   width: 100%;
-  height: 100%;
-  /* background-color: blue; */
+  max-height: 100%;
+  background-color: blue;
 }
 
 .aboutcontainer>.name {
-  grid-area: 2 / 7 / 3 / 11;
-  background-color: red;
+  grid-area: 2 / 6 / 3 / 10;
+  /* background-color: red; */
+  font-weight: bold;
+  align-self: center;
+  padding: 1rem;
+  /* padding-top: 2rem; */
+  font-size: 25px;
 }
 
 .aboutcontainer>.text {
-  grid-area: 3 / 7 / 5 / 11;
+  grid-area: 3 / 6 / 5 / 10;
   background-color: orange;
+  padding: 2rem 1rem;
+  padding-right: 2%;
+  font-size: 18px;
 }
 
 .aboutcontainer>.buttons {
-  grid-area: 5 / 7 / 6 / 11;
-  background-color: green;
+  grid-area: 5 / 6 / 6 / 10;
+  /* background-color: green; */
+  /* align-self: center;
+  margin-left: 2%; */
+  /* margin-right: 10%; */
+  /* padding-left: 2rem; */
+  /* display: flex;
+  flex-wrap: wrap;
+  flex-direction: row; */
+  /* justify-content: space-evenly; */
+  /* gap: 1rem; */
 }
 
 
 
+
+/* CSS */
+.button-3 {
+  appearance: none;
+  background-color: #2ea44f;
+  border: 1px solid rgba(27, 31, 35, .15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 16px;
+  /* position: relative; */
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+  /* margin-right: 2%; */
+}
+
+/* .button-3:focus:not(:focus-visible):not(.focus-visible) {
+  box-shadow: none;
+  outline: none;
+}
+
+.button-3:hover {
+  background-color: #2c974b;
+}
+
+.button-3:focus {
+  box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+  outline: none;
+}
+
+.button-3:disabled {
+  background-color: #94d3a2;
+  border-color: rgba(27, 31, 35, .1);
+  color: rgba(255, 255, 255, .8);
+  cursor: default;
+}
+
+.button-3:active {
+  background-color: #298e46;
+  box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+} */
 
 
 /*
@@ -311,7 +395,7 @@ body::after {
   background:grey;
 }
 
-@media only screen and (max-width: 600px) { /* poate fi si 800px pt landscape in telefoane */
+@media only screen and (max-width: 800px) { /* poate fi si 800px pt landscape in telefoane */
 
   .container1{
     background-color: red;
@@ -375,12 +459,39 @@ body::after {
 
 
 
-
-
-
-
-
-
+  .aboutcontainer {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  }
+  .aboutcontainer>.image {
+    grid-area: 2 / 2 / 6 / 6;
+    justify-self: center;
+    background-color: blue;
+  }
+  .aboutcontainer>.image>img{
+    object-fit: scale-down;
+    /* width: 80%;
+    max-height: 100%; */
+    max-height: 100%;
+    width: 100%;
+  }
+  .aboutcontainer>.name{
+    grid-area: 6 / 2 / 7 / 6;
+    background-color: red;
+  }
+  .aboutcontainer>.text {
+    grid-area: 7 / 2 / 9 / 6;
+    background-color: orange;
+  }
+  .aboutcontainer>.buttons {
+    grid-area: 9 / 2 / 10 / 6;
+    justify-self: center;
+    justify-content: space-around;
+    background-color: green;
+  }
 
 
 
